--- a/styles.css
+++ b/styles.css
@@ -1,56 +1,64 @@
 body {
   font-family: 'Lato', arial, sans-serif;
   color: #434343;
-  background: #DAE3E7;
+  background: #f5f5f5;
   font-size: 16px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-h1, h2 {
+h1, h2, h3, h4 {
   font-family: 'Montserrat', sans-serif;
   font-weight: 700;
-  color: #778492;
+  color: #434343
 }
 
 a {
-  color: #3AAA64;
+  
   text-decoration: none;
 }
 
 a:hover {
   text-decoration: underline;
-  color: #2d844e;
+  
+}
+
+h2.text-start {
+  font-size: 32px;
 }
 
 a:focus {
   text-decoration: none;
+  
 }
 
 .header {
   padding: 30px 0;
   background: #f5f5f5;
-  display: flex;
-  align-items: center;
 }
+
+section{
+  padding: 30px 0;
+  
+}
+
+
 
 .profile-image {
   margin-right: 30px;
   border-radius: 50%;
 }
-.profile-content {
-  flex-grow: 1;
-}
+
 
  .profile-content .name {
-  color: #49515a;
-  font-size: 38px;
+  
+  font-size: 30px;
   margin-bottom: 5px;
   margin-top: 30px;
 }
 
  .profile-content .desc {
-  color: #778492;
+ 
   font-family: "Lato", arial, sans-serif;
   font-weight: 400;
   font-size: 24px;
@@ -58,12 +66,106 @@ a:focus {
   margin-bottom: 15px;
 }
 
-.header .profile-content:hover {
-  background: #778492;
-}
+
 
 .header .profile-content {
   font-size: 20px;
   margin-top: 8px;
 }
 
+
+
+.project {
+  position: relative;
+}
+
+.project-image-container {
+  position: relative;
+  overflow: hidden;
+}
+
+.project-image {
+  height: 200px;
+  object-fit: cover;
+  transition: transform 0.3s ease, opacity 0.3s ease;
+}
+
+.project-image:hover {
+  transform: scale(1.1);
+}
+
+.project:hover .project-image {
+  opacity: 0.8;
+  transform: scale(1.1);
+} 
+
+.project-overlay {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  opacity: 1;
+  background-color: rgba(254, 254, 254, 0.6); 
+  color: black;
+}
+
+.project-title {
+  font-size: 20px;
+  font-weight: 600;
+  margin-bottom: 0.5rem;
+}
+
+.project-description {
+  font-size: 18px;
+}
+
+.email-link {
+  text-decoration: none;
+}
+
+.card-body {
+  background-color: #f5f5f5;
+}
+
+.icon-container {
+  display: flex;
+  margin-left: 20px; 
+}
+
+.icon {
+  margin-right: 20px; 
+}
+
+.footer {
+  background-color: #f8f8f8;
+  padding: 20px 0;
+  text-align: center;
+}
+
+.footer h4 {
+  color: #333;
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.footer ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.footer li {
+  margin-bottom: 5px;
+  font-size: 16px;
+  color: #777;
+}
+
+.footer a {
+  color: #777;
+  text-decoration: none;
+}
+
+.footer a:hover {
+  color: #333;
+}
