--- a/styles.css
+++ b/styles.css
@@ -9,19 +9,23 @@ body {
 
 h1, h2, h3, h4 {
   font-family: 'Montserrat', sans-serif;
-  font-weight: 700;
+  font-weight: 600;
   color: #434343
 }
+
+.email-address,
+.fa-envelope {
+  color: #848383;
+}
+
+
 
 a {
   
   text-decoration: none;
 }
 
-a:hover {
-  text-decoration: underline;
-  
-}
+
 
 h2.text-start {
   font-size: 32px;
@@ -35,6 +39,10 @@ a:focus {
 .header {
   padding: 30px 0;
   background: #f5f5f5;
+}
+ 
+.navbar-nav .nav-link {
+  font-size: 20px; 
 }
 
 section{
@@ -57,11 +65,19 @@ section{
   margin-top: 30px;
 }
 
- .profile-content .desc {
- 
+ .profile-content {
   font-family: "Lato", arial, sans-serif;
-  font-weight: 400;
+  font-weight: 300;
   font-size: 24px;
+  margin-top: 0;
+  margin-bottom: 15px;
+  color: #434343;
+}
+
+.desc {
+  font-family: "Lato", arial, sans-serif;
+  font-weight: 300;
+  font-size: 22px;
   margin-top: 0;
   margin-bottom: 15px;
 }
@@ -169,3 +185,17 @@ section{
 .footer a:hover {
   color: #333;
 }
+
+.text-center {
+  margin-bottom: 20px;
+}
+
+#stack {
+  padding-bottom: 0;
+}
+
+
+
+
+
+
